Edits to 07-glossary

--- a/07-glossary.Rmd
+++ b/07-glossary.Rmd
@@ -34,6 +34,10 @@ For NSW central coast plant lists, also see https://www.austplants.com.au/resour
 
 <br>
 
+**monocarpic**  Flowering and bearing fruit only once and then dying
+
+<br>
+
 **potting up** This is moving seedlings or rooted cuttings to their first pot.
 
 **potting on, growing on** This is moving a plant that has outgrown its pot into a larger pot.
