--- a/07-glossary.Rmd
+++ b/07-glossary.Rmd
@@ -24,13 +24,17 @@ For NSW central coast plant lists, also see https://www.austplants.com.au/resour
 **hardwood**
 
 - Wood or wood products from flowering trees (broad-leaved tree species), such as eucalypts, irrespective of the physical hardness of the wood (https://www.agriculture.gov.au/abares/forestsaustralia/glossary/search?name_1=Hardwood).
-- Another (horticultural) definition: Wood that undergoes secondary growth
+- Another (horticultural) definition: Wood that undergoes secondary growth.
+
+- Hardwoods are dicots.
 
 **softwood**
 
 - Wood or wood products from conifers, irrespective of the physical softness of the wood.
 
-- Another (horticultural) definition: Wood that does not undergo secondary growth
+- Another (horticultural) definition: Wood that does not undergo secondary growth.
+
+- Softwoods are conifers.
 
 <br>
 
