--- a/01-soil.Rmd
+++ b/01-soil.Rmd
@@ -464,11 +464,31 @@ At low pH, Al, Fe and Mn - and heavy metals - become more soluble and can be tox
 
 ### Acid sulphate soils - a little aside
 
-Acid sulphate soils occur on marine floodplains in temperate and tropical climates. When these floodplains are drained, pyrite in the soil is oxidised and high levels of acidity produced.
+Acid sulphate soils occur on marine floodplains in temperate and tropical climates. When these floodplains are drained, pyrite in the soil is oxidised and high levels of acidity produced. Disulphide (S~2~^2-^) is oxidised by ferric iron (Fe^3+^) to produce sulphate (SO~4~^2-^), ferrous iron (Fe^2+^) and protons.
 
-FeS~2~ + 15/4 O~2~ + 7/2 H~2~O $\rightarrow$ Fe(OH)~3~ + 2H~2~SO~4~
+This is Sparks' equation (p. 270):
 
-It's the sulphur that's oxidised here.
+|        FeS~2~ + 15/4 O~2~ + 7/2 H~2~O $\rightarrow$ Fe(OH)~3~ + 2H~2~SO~4~
+
+<br>
+
+Essington gives his version, including the half reactions (p. 446):
+
+|        FeS~2~(s) + 8H~2~O(l) $\rightarrow$ Fe^2+^(aq) + 2SO~4~^2-^(aq) + 16H^+^(aq) + 14e^-^
+|  
+|        14Fe^3+^(aq) + 14e^-^ $\rightarrow$ 14Fe^2+^(aq),
+
+<br>
+
+with the overall reaction
+
+|        FeS~2~(s) + 14Fe^3+^(aq) + 8H~2~O(l) $\rightarrow$ 15Fe^2+^(aq) + 2SO~4~^2-^(aq) + 16H^+^(aq)
+
+<br>
+
+Here, Fe^3+^ is the oxidant and S^2-^ is the reductant.
+
+(*Another aside:* The pyrite structure also occurs in other MX~2~ compounds, where M is a transition metal and X is a member of the oxygen group (O, S, Se and Te).)
 
 
 ### Al and soil acidity
@@ -479,9 +499,18 @@ There's a set of reactions "starting" with [Al(H~2~O)~6~]^3+^ and "ending" with 
 
 The start is 
 
-[Al(H~2~O)~6~]^3+^ + H~2~O $\rightleftharpoons$ [Al(OH)(H~2~O)~5~]^2+^ + H~3~O^+^
+|        [Al(H~2~O)~6~]^3+^ + H~2~O $\rightleftharpoons$ [Al(OH)(H~2~O)~5~]^2+^ + H~3~O^+^
 
-and it just goes on from there.
+and it just goes on from there. See below.
+
+
+```{r echo = F, out.width = '60%', fig.align = 'center', fig.cap = 'Sparks, p. 271'}
+
+knitr::include_graphics("figs/sparks_al_equations_p271.png")
+
+```
+
+
 
 Two points are noteworthy:
 
@@ -490,6 +519,16 @@ Two points are noteworthy:
   - if pH < 4.7 or pH > 7.5, the concentration of Al^3+^ quickly increases.
 
 If 4.7 < pH < 7.5, the solubility of Al is low and it precipitates as Al(OH)~3~.
+
+
+
+```{r echo = F, out.width = '70%', fig.align = 'center', fig.cap = 'Sparks, Fig. 9.2, p. 272'}
+
+knitr::include_graphics("figs/sparks_al_species_plot_fig9-2.png")
+
+```
+
+<br>
 
 Free Al^3+^ might only account for a small proportion of Al in the soil solution. There may be quite a lot bound to fluoride or sulphate ions, humic material or organic acids.
 
@@ -521,15 +560,6 @@ The proportion of exchangeable acidity out of total acidity decreases in this or
 
 Al and Fe coatings on clay particles reduce the amount of exchangeable acidity that can be extracted and so reduce the proportion of exchangeable acidity in the total acidity.
 
-### Liming
-
-To neutralise soil acidity, apply lime. The general reaction is:
-
-CaCO~3~ + H~2~O $\rightarrow$ Ca^2+^ + HCO~3~^-^ + OH^-^
-
-The hydroxide reacts with existing H^+^ or H^+^ formed by hydrolysing Al^3+^:
-
-2 Al-soil + 3CaCO~3~ + 3H~2~O $\rightarrow$ 3 Ca-soil + 2Al(OH)~3~ ($\downarrow$) + 3CO~2~
 
 
 ### Acidity and biological processes
@@ -540,13 +570,15 @@ See Essington, *Soil and Water Chemistry*, chapter 10.
 
 Most oxidation reactions produce protons. Most reduction reactions consume protons. **Curious!**
 
+Systems with lots of electrons are reduced (here hydrogen will be more stable relative to water) and those depleted of electrons are oxidised  (here, oxygen will be more stable relative to water) (Essington, pp. 445 & 447).
+
 You need to look at the whole redox reaction to see what's happening - oxidation or reduction half-reactions on their own don't show the full picture.
 
 *Example*
 
 Oxidising ammonium can potentially lead to acidification through nitrification:
 
-NH~4~^+^ (aq) + 2O~2~(g) $\rightarrow$ NO~3~^-^(aq) + 2H^+^(aq) + H~2~O(l)
+|        NH~4~^+^ (aq) + 2O~2~(g) $\rightarrow$ NO~3~^-^(aq) + 2H^+^(aq) + H~2~O(l)
 
 Nitrification will only lead to acidification if the nitrate and base cations are leached from the soil.
 
@@ -556,19 +588,131 @@ The Al dissolved in this weathering will hydrolyse, producing more acidity and a
 
 If the nitrate is not leached, acidification may not occur. This is because, when plants absorb a nutrient anion, they release OH^-^ and HCO~3~^-^, generating alkalinity:
 
-[equivalents anions absorbed] - [equivalents cations absorbed] = [equivalents hydroxide and hydrogen carbonate released]
+
+|        [equivalents anions absorbed] - [equivalents cations absorbed] = [equivalents hydroxide
+|            and hydrogen carbonate released]
+
 
 Similarly, when plant roots absorb cations, acidity is generated:
 
-[equivalents cations absorbed] - [equivalents anions absorbed] = [equivalents protons released]
+|        [equivalents cations absorbed] - [equivalents anions absorbed] = [equivalents protons released]
+
+<br>
 
 Plants usually absorb more cations than anions, so, on the whole, more protons are released than hydroxide and hydrogen carbonate. The pH of the rhizosphere can be up to two units lower than the soil solution.
 
 
 
+### Neutralising soil acidity, liming ...
 
-Look at Essington, s. 10.4 (liming etc.)
+Sparks, pp. 281-282
 
+To neutralise soil acidity, apply lime. The general reaction is:
+
+|        CaCO~3~ + H~2~O $\rightarrow$ Ca^2+^ + HCO~3~^-^ + OH^-^
+
+<br>
+
+The hydroxide reacts with existing H^+^ or H^+^ formed by hydrolysing Al^3+^:
+
+|        2 Al-soil + 3CaCO~3~ + 3H~2~O $\rightarrow$ 3 Ca-soil + 2Al(OH)~3~ ($\downarrow$) + 3CO~2~
+
+<br>
+
+The products are Ca^2+^, which can move onto exchange sites, and Al(OH)~3~, which precipitates, removing Al from exchange sites and the soil solution (more on this from Essington below).
+
+<br>
+
+Essington, s. 10.3 & 10.4, pp. 483ff.
+
+Revisiting soil acidity. If less H^+^ is neutralised than is produced by acid-forming processes, soil becomes acidic. Some of these neutralising processes are:
+
+- mineral weathering
+- plants taking up anions
+- anions or surface functional groups being protonated
+- base cations being retained on exchange sites
+- reduction reactions
+
+
+*Definitions*
+
+*Acid-neutralisation capacity* of the soil solid phase (ANC)
+
+- When K-feldspar, for example, is weathered by hydrolysis (i.e. dissolved), protons are consumed. This reduces the ANC of the soil solids by using up minerals (i.e. K-feldspar) that can neutralise protons.
+- When Al^3+^ is hydrolysed, gibbsite (Al(OH)~3~) is precipitated and protons are produced. This increases the ANC of the soil solids by producing a mineral that can neutralise protons (i.e. the reaction could go the other way, if conditions were right).
+- The soil exchange complex responds quickly to any change in the soil solution.
+- The ANC of the soil solids exchange complex (soil exchange phase ANC) is the amount of surface charge on the exchange complex that equals the charge of the exchangeable bases adsorbed on the complex. These exchangeable bases are the metals that do not hydrolyse at usual soil pH (Ca^2+^, Mg^2+^, K^+^, Na^+^).
+- The ANC of the soil exchange pahse is also called "base saturation".
+
+So, ...
+
+*Total acidity*
+
+- Total acidity of a soil = CEC - ANC (i.e. the part of the CEC not occupied by exchangeabe base cations)
+- Actual total acidity is also called exchangeable acidity. (There is also non-exchangeable acidity. This is made up of Al species and protons that are bound onto surfaces but that cannot be displaced. This is not part of total acidity.)
+- It's mainly made up of 
+  - Al^3+^ and Al(OH)~2~^+^ on clay exchange sites
+  - Al species and protons that are in complexes with organic functional groups
+  
+<br>
+
+Back to neutralising soil acidity ...
+
+The point at which soil acidity needs to be reduced for optimal plant growth is not based on pH but on total acidity. Well, ...!
+
+When total acidity reaches more than about 15 % of CEC, soil acidity needs to be reduced.
+
+To reduce acidity to an appropriate level, base cations need to be added to remove acidic species from the exchange complex. Usually, Ca^2+^ or Mg^2+^ is added.
+
+The lime requirement is based on the amount of these base cations needed to reduce total acidity and is not based on the pH.
+
+Tests used to work out how much base cation is needed are built on buffer tests incorporating measured changes in pH values and give approximate values.
+
+The liming materials usually used are limestone (CaCO~3~) and dolomite (CaMg(CO~3~)~2~).
+
+Adding CaCO~3~ initially consumes protons but the overall soil neutralisation reaction *conserves* protons.
+
+The aims of liming are to:
+
+- displacing Al species from the exchange phase by base cations
+- precipitate the Al that has been displaced
+
+The reactions go like this:
+
+|        3CaCO~3~(s) + 6H^+^(aq) $\rightarrow$ 3Ca^2+^(aq) + 3CO~2~(g) + 3H~2~O(l)
+
+<br>
+
+This first reaction quickly increases the pH of the soil solution. This increased pH promotes Ca^2+^ moving onto exchange sites:
+
+|        3Ca^2+^(aq) + 2AlX~3~(ex) $\rightarrow$ 3CaX~2~(ex) + 2Al^3+^(aq)
+
+<br>
+
+The raised pH also promotes Al precipitating:
+
+|        2Al^3+^(aq) + 3H~2~O(l) $\rightarrow$ 2Al(OH)~3~(s) + 6H^+^(aq)
+
+<br>
+
+Adding the three equations above together gives the overall reaction equation:
+
+|        3CaCO~3~(s) + 2AlX~3~(ex) + 3H~2~O(l) $\rightarrow$  3CaX~2~(ex) + 2Al(OH)~3~(s) + 3CO~2~(g) 
+
+<br>
+
+Note that there is no net decrease in H^+^ ions.
+
+
+
+
+
+
+
+Expand on the neutralising processes above:
+
+Mineral weathering (see Essington, p. 473) - e.g. especially, 
+|        Fe^2+^(aq) + 1/4 O~2~(g) + H^+^(aq) $\rightarrow$ Fe^3+^(aq) + 1/2 H~2~O
 
 
 
