Edits to 02-plants.Rmd.

--- a/02-plants.Rmd
+++ b/02-plants.Rmd
@@ -1,5 +1,24 @@
 # Plants
 
+
+## Classification of living things
+
+Cavalier-Smith and colleagues came up with the classification system below in 2015 (doi:10.1371/journal.pone.0119248; my copy: ruggiero cavalier-smith classification organisms 2015.pdf).
+
+This system uses two superkingdoms, Prokaryota and Eukaryota, and seven kingdoms.
+
+No more explanatory notes about it yet!
+
+
+
+```{r echo = F, fig.align = 'center'}
+
+knitr::include_graphics("figs/classify_organisms_33pc.png")
+
+```
+
+
+
 ## Plant classification
 
 Plants can be classified in more than one way. The method you choose depends on what differences you want to highlight.
